yaml/ingress/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: temporal-trivia-ui
  name: ingressroute-temporal-trivia
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`triviav2.tmprl-demo.cloud`)
    services:
    - name: ui
      passHostHeader: true
      port: 5000
      responseForwarding:
        flushInterval: 100ms
  tls:
    secretName: trivia-tmprl-demo-cloud-tls
