yaml/ingress/ingressroute_http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: temporal-trivia-ui
  name: ingressroute-temporal-trivia-http
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`triviav2.tmprl-demo.cloud`)
    services:
    - name: ui
      passHostHeader: true
      port: 5000
      responseForwarding:
        flushInterval: 100ms
